// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeListItem /> Should not break if no recipe pass 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    ⬜️
  </span>
  <span />
  <span />
</li>
`;

exports[`<RecipeListItem /> Should render favorited state 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    ✅
  </span>
  <span>
    Test recipe
  </span>
  <span>
    Test category
  </span>
</li>
`;

exports[`<RecipeListItem /> Should render recipe correctly 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    ⬜️
  </span>
  <span>
    Test recipe
  </span>
  <span>
    Test category
  </span>
</li>
`;
